# idea-gen

./: .gitignore  CLAUDE.md  EVAL.md  README.md  SPEC.md  config.yaml  llm-for-agent.txt  progress.md  pyproject.toml  user_skill.txt
docs/plans/: 2026-02-02-idea-generator-pipeline.md
src/: config.py  embeddings.py  graph.py  llm.py  logging_utils.py  main.py  prompt_utils.py  schemas.py  scoring.py  search.py  storage.py
src/agents/: dsr_designer.py  gatekeeper.py  ideator.py  pre_ranker.py  principles_judge.py  ranker.py  recombiner.py  selector.py  user_review.py
src/prompts/: angel_rescue_system.md  angel_rescue_user.md  dsr_designer_system.md  dsr_designer_user.md  gatekeeper_system.md  gatekeeper_user.md  ideator_system.md  ideator_user.md  pre_ranker_system.md  pre_ranker_user.md  principles_judge_system.md  principles_judge_user.md  ranker_system.md  ranker_user.md  recombiner_system.md  recombiner_user.md
src/prompts/context/: past_themes.md
tests/: test_gatekeeper_logic.py  test_ranker_stability.py  test_schema_validation.py
